# pdf_extractor

./: .gitignore  README.en_us.md  README.md  build.ps1  pyproject.toml  requirements.txt  setup_and_build.ps1  setup_and_build.sh
build_tools/: longpaths.manifest
src/pdf_extractor/: core.py  gui.py
